--- a/Q2.ipynb
+++ b/Q2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 336,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -94,12 +94,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Run sparse linear predictor\n",
-    "SLP_minMSE = 1000000000\n",
+    "SLP_minMSE = float(\"inf\")\n",
     "SLP_minMSEIndex = [0,1,2,3]\n",
     "SLP_minMSEBetas = []\n",
     "\n",
@@ -116,7 +116,7 @@
     "            SLP_yhat = x @ SLP_betas\n",
     "\n",
     "            # Calculate MSE\n",
-    "            tmpMSE = (SLP_yhat.T @ SLP_yhat - 2*(SLP_yhat.T @ y) + y.T @ y)/len(ypred)\n",
+    "            tmpMSE = (SLP_yhat.T @ SLP_yhat - 2*(SLP_yhat.T @ y) + y.T @ y)/len(SLP_yhat)\n",
     "\n",
     "            # Store argminimizer of MSE\n",
     "            if tmpMSE < SLP_minMSE:\n",
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 337,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 340,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
