--- a/Q2.ipynb
+++ b/Q2.ipynb
@@ -151,7 +151,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "SLP_yhat = testdata[:,SLP_minMSEIndex] @ SLP_betas\n",
+    "SLP_yhat = testdata[:,SLP_minMSEIndex] @ SLP_minMSEBetas\n",
     "SLP_MSE = (SLP_yhat.T @ SLP_yhat - 2*(SLP_yhat.T @ testlabels) + testlabels.T @ testlabels)/len(SLP_yhat)"
    ]
   },
@@ -164,7 +164,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test squared loss risk is 0.5942.\n"
+      "Test squared loss risk is 0.5565.\n"
      ]
     }
    ],
@@ -220,7 +220,7 @@
      "output_type": "stream",
      "text": [
       "The risks for the ordinary least squares estimator is 0.5398.\n",
-      "The risks for the sparse linear predictor is 0.5942.\n"
+      "The risks for the sparse linear predictor is 0.5565.\n"
      ]
     }
    ],
