--- a/hw6Q3(B)(C)(D)Serena.ipynb
+++ b/hw6Q3(B)(C)(D)Serena.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-18T17:30:31.278343Z",
-     "start_time": "2018-04-18T17:30:30.373287Z"
+     "end_time": "2018-04-19T02:47:58.730359Z",
+     "start_time": "2018-04-19T02:47:57.829223Z"
     },
     "collapsed": true
    },
@@ -25,8 +25,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-18T17:30:31.283457Z",
-     "start_time": "2018-04-18T17:30:31.279821Z"
+     "end_time": "2018-04-19T02:47:59.079422Z",
+     "start_time": "2018-04-19T02:47:59.075503Z"
     }
    },
    "outputs": [
@@ -62,8 +62,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-18T17:30:31.286870Z",
-     "start_time": "2018-04-18T17:30:31.284623Z"
+     "end_time": "2018-04-19T02:47:59.809394Z",
+     "start_time": "2018-04-19T02:47:59.806553Z"
     },
     "collapsed": true
    },
@@ -78,8 +78,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-18T17:30:31.292098Z",
-     "start_time": "2018-04-18T17:30:31.288141Z"
+     "end_time": "2018-04-19T02:48:00.050473Z",
+     "start_time": "2018-04-19T02:48:00.045910Z"
     },
     "collapsed": true
    },
@@ -91,6 +91,7 @@
     "        if (h[t]==i) and (h[t+1])==j:\n",
     "            num+=1\n",
     "    denom= np.where(h[:-1]==i,1,0).sum()\n",
+    "    print(num)\n",
     "    return num/denom"
    ]
   },
@@ -99,12 +100,22 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-18T17:30:31.522395Z",
-     "start_time": "2018-04-18T17:30:31.447530Z"
-    },
-    "collapsed": true
+     "end_time": "2018-04-19T02:48:00.370725Z",
+     "start_time": "2018-04-19T02:48:00.289856Z"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3891\n",
+      "455\n",
+      "454\n",
+      "4019\n"
+     ]
+    }
+   ],
    "source": [
     "A11 = calA(h1,1,1)\n",
     "A12 = calA(h1,1,2)\n",
@@ -117,8 +128,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-18T17:30:31.651390Z",
-     "start_time": "2018-04-18T17:30:31.647903Z"
+     "end_time": "2018-04-19T02:48:00.532848Z",
+     "start_time": "2018-04-19T02:48:00.528574Z"
     }
    },
    "outputs": [
@@ -139,8 +150,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-18T17:30:31.860648Z",
-     "start_time": "2018-04-18T17:30:31.856283Z"
+     "end_time": "2018-04-19T02:48:00.763311Z",
+     "start_time": "2018-04-19T02:48:00.759352Z"
     },
     "collapsed": true
    },
@@ -162,8 +173,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-18T17:30:32.283606Z",
-     "start_time": "2018-04-18T17:30:32.281216Z"
+     "end_time": "2018-04-19T02:48:01.283188Z",
+     "start_time": "2018-04-19T02:48:01.279487Z"
     },
     "collapsed": true
    },
@@ -178,9 +189,10 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-18T17:30:32.504171Z",
-     "start_time": "2018-04-18T17:30:32.500518Z"
-    }
+     "end_time": "2018-04-19T02:48:01.526717Z",
+     "start_time": "2018-04-19T02:48:01.522934Z"
+    },
+    "scrolled": true
    },
    "outputs": [
     {
@@ -201,11 +213,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-18T17:30:32.746026Z",
-     "start_time": "2018-04-18T17:30:32.741626Z"
+     "end_time": "2018-04-19T02:50:08.143911Z",
+     "start_time": "2018-04-19T02:50:08.139372Z"
     },
     "collapsed": true
    },
@@ -213,7 +225,7 @@
    "source": [
     "def xmessage(mu,x):\n",
     "    first = 1/np.power((2*np.pi),4)\n",
-    "    second = np.exp(-(1/2)*np.linalg.norm(x-mu))\n",
+    "    second = np.exp(-(1/2)*(np.linalg.norm(x-mu,ord=2))**2)\n",
     "    return first * second\n",
     "    \n",
     "def x_cond(x):\n",
@@ -222,11 +234,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-18T17:30:33.051814Z",
-     "start_time": "2018-04-18T17:30:32.981317Z"
+     "end_time": "2018-04-19T02:50:08.501111Z",
+     "start_time": "2018-04-19T02:50:08.497455Z"
     },
     "collapsed": true
    },
@@ -239,11 +251,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-18T17:30:33.202273Z",
-     "start_time": "2018-04-18T17:30:33.197977Z"
+     "end_time": "2018-04-19T02:50:08.790697Z",
+     "start_time": "2018-04-19T02:50:08.786288Z"
     },
     "collapsed": true
    },
@@ -262,11 +274,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-18T17:30:33.420653Z",
-     "start_time": "2018-04-18T17:30:33.417633Z"
+     "end_time": "2018-04-19T02:50:09.041639Z",
+     "start_time": "2018-04-19T02:50:09.038244Z"
     },
     "collapsed": true
    },
@@ -282,11 +294,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-18T17:30:33.729546Z",
-     "start_time": "2018-04-18T17:30:33.647354Z"
+     "end_time": "2018-04-19T02:50:09.610747Z",
+     "start_time": "2018-04-19T02:50:09.527826Z"
     },
     "collapsed": true
    },
@@ -303,21 +315,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 31,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-18T17:47:07.555313Z",
-     "start_time": "2018-04-18T17:47:07.551225Z"
+     "end_time": "2018-04-19T02:50:10.056232Z",
+     "start_time": "2018-04-19T02:50:10.052030Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "284"
+       "179"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,12 +349,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 35,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-18T17:46:57.526979Z",
-     "start_time": "2018-04-18T17:46:57.523692Z"
-    }
+     "end_time": "2018-04-19T02:51:06.144245Z",
+     "start_time": "2018-04-19T02:51:06.140849Z"
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -353,19 +366,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 37,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-18T17:46:57.843076Z",
-     "start_time": "2018-04-18T17:46:57.779774Z"
+     "end_time": "2018-04-19T02:51:14.853982Z",
+     "start_time": "2018-04-19T02:51:14.793480Z"
     }
    },
    "outputs": [],
    "source": [
     "pred_gen=[]\n",
     "for i in range(0,x2.shape[0]):\n",
-    "    check1 = c1*(1/np.power((2*np.pi),4)*np.exp(-(1/2)*np.linalg.norm(x2[i]-mu1)))\n",
-    "    check2 = c2*(1/np.power((2*np.pi),4)*np.exp(-(1/2)*np.linalg.norm(x2[i]-mu2)))\n",
+    "    check1 = c1*(1/np.power((2*np.pi),4)*np.exp(-(1/2)*(np.linalg.norm(x2[i]-mu1,ord=2)**2)))\n",
+    "    check2 = c2*(1/np.power((2*np.pi),4)*np.exp(-(1/2)*(np.linalg.norm(x2[i]-mu2,ord=2)**2)))\n",
     "    if check1 >= check2:\n",
     "        pred_gen.append(1)\n",
     "    else:\n",
@@ -374,11 +387,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 38,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-18T17:46:58.049394Z",
-     "start_time": "2018-04-18T17:46:58.045479Z"
+     "end_time": "2018-04-19T02:51:15.381712Z",
+     "start_time": "2018-04-19T02:51:15.377638Z"
     }
    },
    "outputs": [
@@ -388,7 +401,7 @@
        "292"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
